# Alfred-Virtual-Assistant

./: README.md
AlfredVAssistant/: app.py  pyproject.toml
